Some minor fixes and cleanups to commands